--- a/accounting-reporting/jasperreports/PeriodicalRevenue.jrxml
+++ b/accounting-reporting/jasperreports/PeriodicalRevenue.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PeriodicalRevenue" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="13"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
 	<field name="revenue" class="de.togginho.accounting.reporting.RevenueWrapper"/>
@@ -21,7 +21,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="37" splitType="Stretch">
+		<band height="32" splitType="Stretch">
 			<textField>
 				<reportElement style="INVOICE_TX_18B" x="0" y="0" width="183" height="32"/>
 				<textElement/>
@@ -30,71 +30,74 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="20" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="0" y="0" width="40" height="20"/>
+				<reportElement style="INVOICE_TX_12" x="0" y="5" width="40" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{from.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="45" y="0" width="70" height="20"/>
+				<reportElement style="INVOICE_TX_12" x="45" y="5" width="70" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getFromDate()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="120" y="0" width="40" height="20"/>
+				<reportElement style="INVOICE_TX_12" x="120" y="5" width="40" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{until.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="165" y="0" width="70" height="20"/>
+				<reportElement style="INVOICE_TX_12" x="165" y="5" width="70" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getUntilDate()]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="40" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="100" y="10" width="120" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="100" y="5" width="120" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoice.date.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="0" y="10" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="0" y="5" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoice.no.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="344" y="10" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="344" y="5" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{payment.date.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="444" y="10" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="444" y="5" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{net.price.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="544" y="10" width="58" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="544" y="5" width="58" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{taxRate.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="602" y="10" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="602" y="5" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{tax.amount.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="702" y="10" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="702" y="5" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{gross.price.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="220" y="10" width="124" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="220" y="5" width="124" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{client.name.title}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="0" y="0" width="802" height="1"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
@@ -113,14 +116,9 @@
 				<reportElement x="0" y="0" width="802" height="1"/>
 			</line>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="344" y="5" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{sum.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_12B" x="444" y="5" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="702" y="5" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getTotalNet()]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getTotalGross()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_12B" x="602" y="5" width="100" height="20"/>
@@ -128,9 +126,14 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getTotalTaxAmount()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="702" y="5" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="444" y="5" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getTotalGross()]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{revenue}.getTotalNet()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="INVOICE_TX_12B" x="344" y="5" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{sum.title}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
